--- a/mvndemo.simple/pom.xml
+++ b/mvndemo.simple/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.sonatype.mavenbook</groupId>
 		<artifactId>mvndemo.parent</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>mvndemo.simple</artifactId>
 	<packaging>jar</packaging>
