--- a/mvndemo.simple-webapp/pom.xml
+++ b/mvndemo.simple-webapp/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sonatype.mavenbook</groupId>
 		<artifactId>mvndemo.parent</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>simple-webapp</artifactId>
 	<packaging>war</packaging>
