--- a/mvndemo.simple-webapp/pom.xml
+++ b/mvndemo.simple-webapp/pom.xml
@@ -1,19 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sonatype.mavenbook</groupId>
 		<artifactId>mvndemo.parent</artifactId>
 		<version>1.0.2-SNAPSHOT</version>
 	</parent>
-	<artifactId>simple-webapp</artifactId>
+	<artifactId>mvndemo.simple-webapp</artifactId>
 	<packaging>war</packaging>
-	<name>Chapter 5 Simple Web Application Project</name>
+	<name>Chapter 6 Simple Web Application Project</name>
 	<url>http://sonatype.com/book</url>
 	<dependencies>
+
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-servlet_2.4_spec</artifactId>
 			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sonatype.mavenbook</groupId>
+			<artifactId>mvndemo.simple-weather</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -23,6 +30,14 @@
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.9</version>
+				<dependencies>
+					<dependency>
+						<groupId>hsqldb</groupId>
+						<artifactId>hsqldb</artifactId>
+						<version>1.8.0.7</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
