--- a/mvndemo.simple-weather/pom.xml
+++ b/mvndemo.simple-weather/pom.xml
@@ -1,30 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-		<groupId>org.sonatype.mavenbook</groupId>
-		<artifactId>mvndemo.parent</artifactId>
-		<version>1.0.3-SNAPSHOT</version>
-	</parent>
-	<artifactId>mvndemo.simple-weather</artifactId>
+    <groupId>org.sonatype.mavenbook</groupId>
+    <artifactId>mvndemo.parent</artifactId>
+    <version>1.0.3-SNAPSHOT</version>
+  </parent>
+  <artifactId>mvndemo.simple-weather</artifactId>
   <packaging>jar</packaging>
 
-  <name>Chapter 6 Simple Weather API</name>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <testFailureIgnore>true</testFailureIgnore>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement> 
-  </build>
+  <name>MVNDEMO Simple Weather API</name>
 
   <dependencies>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>mvndemo.simple-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
@@ -39,11 +31,6 @@
       <groupId>jaxen</groupId>
       <artifactId>jaxen</artifactId>
       <version>1.1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>velocity</groupId>
-      <artifactId>velocity</artifactId>
-      <version>1.5</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
